--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+body, * {
+  font-family: monospace;
+}
+
 .canvas {
   margin: 0 auto;
   width: 320px;
-  font-family: monospace;
   text-align: center;
 }
 
@@ -54,10 +57,8 @@
   line-height: 28px;
 }
 
-.restart-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+.canvas__restart-button {
+  margin: 10px auto;
   border: 0;
   padding: 0 10px;
   background-color: black;
@@ -78,4 +79,11 @@
   text-align: center;
   font-size: 20px;
   letter-spacing: 1px;
+}
+
+.footer {
+  padding: 20px 0;
+  text-align: center;
+  line-height: 16px;
+  font-size: 10px;
 }
