--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,49 @@
-body, * {
-  font-family: monospace;
+
+body,
+* {
+  font-family: "Roboto Mono", monospace;
+  padding: 0;
+  margin: 0;
+
+  --grey: #aaa;
+  --black: #000;
+  --white: #fff;
+}
+
+.container {
 }
 
 .canvas {
-  margin: 0 auto;
-  width: 320px;
-  text-align: center;
-}
-
-.canvas__explantion {
+  margin: 0 auto 40px;
 }
 
 .canvas__title {
-  font-weight: 400;
   font-size: 40px;
+  font-weight: 700;
   letter-spacing: 2px;
+  line-height: 100px;
+  margin-bottom: 0px;
+  text-align: center;
 }
 
-.canvas__rules {
-  padding: 16px;
-  background-color: whitesmoke;
-  line-height: 28px;
-  font-size: 20px;
-  letter-spacing: 1px;
-}
-
-.canvas__rules--small {
-  line-height: 20px;
-  font-size: 12px;
+.canvas__title--js {
+  font-weight: 200;
+  font-size: 30px;
 }
 
 .canvas__input {
-  display: block;
-  margin: 20px auto;
-  border: 0px;
-  border-bottom: 4px solid black;
-  padding: 4px 0px;
-  width: 200px;
   background: transparent;
-  line-height: 60px;
+  border: 0px;
+  border-bottom: 10px solid var(--black);
+  display: block;
+  font-size: 90px;
+  font-weight: 700;
+  letter-spacing: 20px;
+  line-height: 100px;
+  margin: 0 auto 4px;
+  width: 320px;
+  padding: 0;
   text-align: center;
-  letter-spacing: 10px;
-  font-size: 60px;
 }
 
 .canvas__input:focus {
@@ -49,45 +51,120 @@ body, * {
 }
 
 .canvas__input:disabled {
-  border-color: whitesmoke;
+  border-color: var(--grey);
 }
 
 .canvas__results {
-  margin-bottom: 30px;
+  margin: 20px auto;
   line-height: 28px;
+  width: 320px;
 }
 
-.canvas__restart-button {
-  margin: 10px auto;
-  border: 0;
-  padding: 0 10px;
-  background-color: black;
-  font-family: monospace;
-  font-size: 12px;
-  line-height: 30px;
-  color: white;
+.canvas__result {
+  border-bottom: 1px dashed var(--black);
+  display: flex;
+  justify-content: stretch;
+  line-height: 40px;
+  margin-bottom: 10px;
+  padding: 0 0 10px 10px;
+  text-align: right;
+}
+
+.canvas__guess {
+  flex: 1;
+  font-weight: 700;
+  font-size: 30px;
+  letter-spacing: 10px;
+  text-align: left;
+}
+
+.canvas__success {
+  flex: 1;
+  font-size: 30px;
+  letter-spacing: 10px;
 }
 
 .canvas__highscore {
-  margin-bottom: 20px;
+  background-color: var(--grey);
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  line-height: 40px;
+  margin: 20px auto;
+  text-transform: uppercase;
+  text-align: center;
+  width: 320px;
 }
 
 .canvas__notification {
+  color: var(--grey);
+  font-size: 20px;
+  font-weight: 400;
   padding: 10px 0;
   text-align: center;
-  font-size: 20px;
-  color: red;
 }
 
 .canvas__results {
-  text-align: center;
   font-size: 20px;
   letter-spacing: 1px;
+  text-align: center;
+}
+
+.glossary {
+  border-bottom: 2px dashed var(--grey);
+  font-size: 14px;
+  margin: 0 auto 40px;
+  max-width: 300px;
+  padding-bottom: 40px;
+}
+
+.reset-button {
+  background-color: var(--grey);
+  border: 0;
+  color: var(--white);
+  cursor: pointer;
+  display: block;
+  font-family: "Roboto Mono", monospace;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  line-height: 16px;
+  margin: 0 auto 60px;
+  padding: 4px 10px;
+  text-transform: uppercase;
+  transition: background-color 0.2s;
+}
+
+.reset-button:hover {
+  background-color: var(--black);
+}
+
+.rules {
+  font-size: 14px;
+  margin: 0 auto 20px;
+  max-width: 300px;
+}
+
+.rules__h2 {
+  border-bottom: 4px solid var(--black);
+  padding: 0 0 20px;
+  margin: 0 0 20px;
+}
+
+.rules__p {
+  font-size: 16px;
+  margin: 0 0 20px;
 }
 
 .footer {
+  font-size: 12px;
+  line-height: 24px;
   padding: 20px 0;
   text-align: center;
-  line-height: 16px;
-  font-size: 10px;
+}
+.footer img {
+  display: block;
+  margin: 0 auto;
+  width: 60px;
 }
